# cpp_python_stacktrace

./: CMakeLists.txt  README.md
include/: custom_exceptions.h  elf_utils.h  posix_file_util.h  ptrace_wrapper.h  python_frame.h
src/: binary_util.cpp  cpp_frame.cpp  elf_utils.cpp  frame.cpp  posix_file_util.cpp  ptrace_wrapper.cpp  python_frame.cpp  symbol.cpp
test/: unwind_c_stack.cpp  unwind_cpp_stack.cpp  unwind_ptrace_stack.cpp  unwind_py_stack.cpp
